# FRA532_LAB2_Control

./: README.md  ken.md  my_data.csv  tae.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/quad_description/lib/quad_description/: LQR.py  MPCNode5.py  MPCNode6.py  PID.py  dashboard_analysis.py  dashboard_realtime.py  send_traject.py  trajectory_visualizer.py
install/quad_description/share/quad_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/quad_description/share/quad_description/cmake/: quad_descriptionConfig.cmake
install/quad_description/share/quad_description/launch/: lqi.launch.py  lqr.launch.py  mpc.launch.py  sim.launch.py
install/quad_description/share/quad_description/urdf/: quadrotor_base copy.xacro
log/: latest_build
quad_description/: CMakeLists.txt
quad_description/launch/: lqr.launch.py  mpc.launch.py  sim.launch.py
quad_description/rviz/: sim.rviz
quad_description/scripts/: LQI.py  LQR.py  LQR_v1.py  MPC.py  MPCNode3.py  MPCNode4.py  MPCNode5.py  MPCNode6.py  PID.py  PIDNode.py  PIDNode2.py  PIDNode3.py  PID_ken.py  dashboard_analysis.py  dashboard_realtime.py  iLQR.py  quadrotor_mpc.py  send_traject.py  send_trajectory.py  send_trajectory_2.py  traject_gen.py  trajectory_visualizer.py
quad_description/scripts/utils/: MPC.py  MPCken.py  MPCken2.py  PID.py  linear_trajectory.py  mma.py  mpc_controller.py  mpc_utils.py
quad_description/urdf/: gazebo_full.xacro
quad_description/worlds/: empty.sdf
(+3 files in other folders)
